[project]
name = "stream-extractor"
version = "0.1.0"
description = "Extract m3u8 streams from URLs and play in VLC"
requires-python = ">=3.10"
dependencies = ["playwright"]

[project.scripts]
stream-extractor = "stream_extractor.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
